--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "nasocial",
   "version": "1.0.0",
   "description": "A mini social network for Na project",
-  "main": "src/sever.ts",
+  "main": "src/server.ts",
   "scripts": {
+    "start": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/ZzinzZ/NaSocial/issues"
   },
-  "homepage": "https://github.com/ZzinzZ/NaSocial#readme"
+  "homepage": "https://github.com/ZzinzZ/NaSocial#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
+  }
 }
