--- a/package.json
+++ b/package.json
@@ -21,12 +21,26 @@
   },
   "homepage": "https://github.com/ZzinzZ/NaSocial#readme",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
+    "envalid": "^8.0.0",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "mongoose": "^8.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/hpp": "^0.2.6",
+    "@types/morgan": "^1.9.9",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "tsconfig-paths": "^4.2.0",
+    "winston": "^3.11.0"
   }
 }
