--- a/package.json
+++ b/package.json
@@ -21,12 +21,20 @@
   },
   "homepage": "https://github.com/ZzinzZ/NaSocial#readme",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/gravatar": "^1.8.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
