--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/gravatar": "^1.8.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
+    "@types/normalize-url": "^4.2.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -38,6 +39,7 @@
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
+    "normalize-url": "^8.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
