--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "normalize-url": "^5.3.0",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yaml": "^2.4.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
