--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "nodemon src/server.ts",
+    "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -50,8 +51,11 @@
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.9",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
     "tsconfig-paths": "^4.2.0",
     "winston": "^3.11.0"
   }
