--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A mini social network for Na project",
   "main": "src/server.ts",
   "scripts": {
-    "start": "nodemon src/server.ts",
-    "lint": "eslint . --ext .ts",
+    "server": "nodemon src/server.ts",
+    "build": "webpack",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "run:dev": "cross-env NODE_ENV=development nodemon dist/server.js",
+    "lint": "eslint . --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -51,12 +54,18 @@
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.9",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
+    "ts-loader": "^9.5.1",
     "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-shell-plugin": "^0.5.0",
     "winston": "^3.11.0"
   }
 }
