--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "nasocial",
   "version": "1.0.0",
   "description": "A mini social network for Na project",
-  "main": "src/sever.ts",
+  "main": "src/server.ts",
   "scripts": {
+    "server": "nodemon src/server.ts",
+    "build": "webpack",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "run:dev": "cross-env NODE_ENV=development nodemon dist/server.js",
+    "lint": "eslint . --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +23,49 @@
   "bugs": {
     "url": "https://github.com/ZzinzZ/NaSocial/issues"
   },
-  "homepage": "https://github.com/ZzinzZ/NaSocial#readme"
+  "homepage": "https://github.com/ZzinzZ/NaSocial#readme",
+  "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/gravatar": "^1.8.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongoose": "^5.11.97",
+    "@types/normalize-url": "^4.2.0",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
+    "envalid": "^8.0.0",
+    "express": "^4.18.2",
+    "gravatar": "^1.8.2",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.3",
+    "normalize-url": "^5.3.0",
+    "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "yaml": "^2.4.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/hpp": "^0.2.6",
+    "@types/morgan": "^1.9.9",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "ts-loader": "^9.5.1",
+    "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-shell-plugin": "^0.5.0",
+    "winston": "^3.11.0"
+  }
 }
