--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "server": "nodemon src/server.ts",
     "build": "webpack",
-    "start": "cross-env NODE_ENV=production node dist/server.js",
-    "run:dev": "cross-env NODE_ENV=development nodemon dist/server.js",
+    "start": "node dist/server.js",
+    "run:dev": "nodemon dist/server.js",
     "lint": "eslint . --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
