--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
+    "winston": "^3.12.0",
     "yaml": "^2.4.1"
   },
   "devDependencies": {
@@ -64,7 +65,6 @@
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0",
-    "webpack-shell-plugin": "^0.5.0",
-    "winston": "^3.11.0"
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
