--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/normalize-url": "^4.2.0",
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -44,6 +45,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "normalize-url": "^5.3.0",
+    "socket.io": "^4.7.4",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
@@ -59,6 +61,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
+    "http-server": "^14.1.1",
     "ts-loader": "^9.5.1",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
