--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "winston": "^3.12.0",
-    "yaml": "^2.4.1"
+    "yaml": "^2.4.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
